--- a/packages/devtools/panel/panel.html
+++ b/packages/devtools/panel/panel.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <link rel="stylesheet" href=panel.css" />
+    <link rel="stylesheet" href="panel.css" />
 </head>
 
 <body>
@@ -15,6 +15,7 @@
         </select>
         <button id="run">Run</button>
     </div>
+    <div id="report"></div>
 </body>
 
 </html>
