chore: re-added html reporter

--- a/packages/ws/public/index.html
+++ b/packages/ws/public/index.html
@@ -27,16 +27,7 @@
         <button type="submit" form="site-form" id="submit-button">CHECK</button>
 
         <div class="result-container">
-            <!-- <div class="screenshot-container">
-                <div class="buttons-container">
-                    <div class="button-osx close"></div>
-                    <div class="button-osx minimize"></div>
-                    <div class="button-osx zoom"></div>
-                </div>
-                <img class="screenshot" src="/screenshots/${parseFilename(filename)}.png" />
-            </div>
-            <div class="issues-container">
-            </div> -->
+           <iframe class="report-container"></iframe>
         </div>
 
     </div>
