refactor: improve app style

--- a/packages/ws/public/index.html
+++ b/packages/ws/public/index.html
@@ -10,7 +10,7 @@
     <div class="form-container">
         <form id="site-form" onsubmit="sendData(event)" method="POST">
             <div class="site-url-container">
-                <input type="text" name="url" placeholder="Type a url">
+                <input type="text" name="url" placeholder="Type an url">
             </div>
 
             <div class="options-container">
