refactor: rename public path to app path

--- a/packages/ws/app/index.html
+++ b/packages/ws/app/index.html
@@ -2,8 +2,8 @@
 <html lang="it">
 
 <head>
-    <script type="text/javascript" src="public/index.js"></script>
-    <link rel="stylesheet" href="public/index.css">
+    <script type="text/javascript" src="index.js"></script>
+    <link rel="stylesheet" href="index.css">
 </head>
 
 <body>
