--- a/packages/ws/app/index.html
+++ b/packages/ws/app/index.html
@@ -2,6 +2,7 @@
 <html lang="it">
 
 <head>
+    <title>Pa11y validator</title>
     <script type="text/javascript" src="index.js"></script>
     <link rel="stylesheet" href="index.css">
 </head>
@@ -11,7 +12,6 @@
         <div class="container">
             <a href="http://pa11y.org/" target="_blank">
                 <img src="http://pa11y.org/resources/brand/logo.svg" alt="" class="site-brand__logo">
-                <span class="site-brand__name">Pa11y</span>
             </a>
         </div>
     </header>
