refactor: new ws logo

--- a/packages/ws/app/index.html
+++ b/packages/ws/app/index.html
@@ -3,24 +3,22 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Pa11y validator</title>
+    <title>A11ygator</title>
     <meta name="viewport" content="width=device-width">
     <script type="text/javascript" src="index.js"></script>
     <link rel="stylesheet" href="index.css">
-    <link rel="icon" type="image/png" href="http://pa11y.org/resources/brand/favicon/favicon-196x196.png">
+    <link rel="icon" type="image/png" href="favicon.png">
 </head>
 
 <body>
     <header>
         <div class="container">
-            <a href="http://pa11y.org/" target="_blank">
-                <img src="http://pa11y.org/resources/brand/logo.svg" alt="" class="site-brand__logo">
-            </a>
+            <img src="logo.png" width="100" alt="The logo of the service is an happy alligator" class="site-brand__logo">
         </div>
     </header>
     <div class="container form-container">
         <p>
-            Validate your Web Site with Pa11y:
+            Validate your Web Site with A11ygator:
         </p>
         <form id="site-form" onsubmit="sendData(event)" method="POST">
             <div class="site-url-container">
