--- a/packages/ws/app/index.html
+++ b/packages/ws/app/index.html
@@ -22,16 +22,18 @@
         </p>
         <form id="site-form" onsubmit="sendData(event)" method="POST">
             <div class="site-url-container">
-                <input type="text" name="url" placeholder="https://www.google.com" required>
+                <input type="text" aria-label="the web url to validate" name="url" placeholder="https://www.google.com" required>
                 <button type="submit" form="site-form" id="submit-button">Check</button>
             </div>
             <div class="options-container">
                 <label for="standard">Standard:</label>
                 <select name="standard" id="standard">
-                    <option value="WCAG2A">WCAG2A</option>
-                    <option value="WCAG2AA" selected>WCAG2AA</option>
-                    <option value="WCAG2AAA">WCAG2AAA</option>
-                    <option value="Section508">Section508</option>
+                    <optgroup label="Standards">
+                        <option value="WCAG2A">WCAG2A</option>
+                        <option value="WCAG2AA" selected>WCAG2AA</option>
+                        <option value="WCAG2AAA">WCAG2AAA</option>
+                        <option value="Section508">Section508</option>
+                    </optgroup>
                 </select>
                 <label for="wait">Wait time (ms):</label>
                 <input type="number" min="0" value="8000" step="100" size="3" max="10000" id="wait" name="wait" />
