fix: download button

--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
         <form id="site-form" onsubmit="sendData(event)" method="POST">
             <div class="site-url-container">
                 <input type="text" aria-label="the web url to validate" name="url" placeholder="https://www.google.com" required>
-                <button type="submit" form="site-form" id="submit-button">Check</button>
+                <button aria-label="check site' type="submit" form="site-form" id="submit-button">Check</button>
             </div>
             <div class="options-container">
                 <div class="option">
