--- a/public/index.html
+++ b/public/index.html
@@ -17,13 +17,11 @@
         </div>
     </header>
     <div class="container form-container">
-        <p>
-            Validate your Web Site with A11ygator:
-        </p>
+        <p>Validate your Web Site with A11ygator:</p>
         <form id="site-form" onsubmit="sendData(event)" method="POST">
             <div class="site-url-container">
-                <input type="text" aria-label="the web url to validate" name="url" placeholder="https://www.google.com" required>
-                <button aria-label="check site' type="submit" form="site-form" id="submit-button">Check</button>
+                <input type="url" aria-label="the web url to validate" name="url" placeholder="https://www.google.com" required>
+                <button aria-label="check site" type="submit" form="site-form" id="submit-button">Check</button>
             </div>
             <div class="options-container">
                 <div class="option">
