[minor] refactor: some style and error template enhancement

--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,7 @@
                 </div>
                 <div class="option">
                     <label for="wait">Wait time (ms):</label>
-                    <input type="number" min="0" value="2000" step="100" size="3" max="10000" id="wait" name="wait" />
+                    <input type="number" min="0" value="2000" step="100" max="8000" id="wait" name="wait" />
                 </div>
             </div>
         </form>
